replace neuron to new js

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Setter.js</title>
     <link href="css/style.css" rel="stylesheet">
+    <script src="js/neuron.js"></script>
     <script src="js/main.js"></script>
 </head>
 <body>
